syntax = "proto3";

option csharp_namespace = "Microservice.Session.Protos";

import "google/protobuf/timestamp.proto";

service Session {
  rpc CreateApiKey(ApiKeyRequest) returns (ApiKeyResponse);
  rpc GetApiKey(ApiKeyRequest) returns (ApiKeyResponse);
  rpc GetAllApiKeys(ApiKeyRequest) returns (ApiKeyResponse);
}


message ApiKeyRequest {
  string user_id = 1;
}

message ApiKeyResponse {
  string org_name = 1;
  string domain = 2;
  string org_email = 3;
  string api_secret = 4;
  repeated string scopes = 5;
  string plan = 6;
  google.protobuf.Timestamp expiration_date = 7;
  int32 request_limit = 8;
  int32 requests_made = 9;
  google.protobuf.Timestamp reset_date = 10;
  bool is_revoked = 11;
  bool is_active = 12;
  google.protobuf.Timestamp last_used = 13;
  google.protobuf.Timestamp created_at = 14;
}
